k8s/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: url-shortener
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: api-gateway
